--- a/DQNN-base QAE with a conjugate layer and modified decoder.ipynb
+++ b/DQNN-base QAE with a conjugate layer and modified decoder.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " The modified DQNN m-1-m with the conjugate layer $V^2=V^{1\\dagger}$. The target state is noisy. m=2, p=0.2 and shot=$2^{15}$. The number of dataset is batch."
+    " Bathaee-Ahmadkhaniha-The modified DQNN m-1-m with the conjugate layer $V^2=V^{1\\dagger}$. The target state is noisy. m=2, p=0.2 and shot=$2^{15}$. The number of dataset is batch."
    ]
   },
   {
