--- a/DQNN-base QAE.ipynb
+++ b/DQNN-base QAE.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Authors-Ahmadkhaniha-Bathaee-GPU used conda 9 for batch 30- Tensorflow version is 2.12.0-Pennylane version is 0.30.0-The DQNN m-1-m. m=2, p=0.2 and shots=$2^{15}$."
+    "Authors-Ahmadkhaniha-Bathaee-GPU used NVIDIA GeForce GTX 1080 Ti with the RAM 8 and the number of computational core 2560 for batch 30- Tensorflow version is 2.12.0-Pennylane version is 0.30.0-The DQNN m-1-m. m=2, p=0.2 and shots=$2^{15}$."
    ]
   },
   {
