--- a/DQNN-base QAE.ipynb
+++ b/DQNN-base QAE.ipynb
@@ -616,8 +616,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(6, 4))\n",
-    "plt.plot(range(epochs), trainb, label=\"Modified decoder-training data\")\n",
-    "plt.plot(range(epochs), validb, label=\"Modified decoder-validation data\",color='red', marker='o', linestyle='dotted')\n",
+    "plt.plot(range(epochs), trainb, label=\"training data\")\n",
+    "plt.plot(range(epochs), validb, label=\"validation data\",color='red', marker='o', linestyle='dotted')\n",
     "#plt.title(\"Fidelity for ({}-{}-{})  Modified decoder DQNN with a conjugate layer noise={}\".format(m,h,m,p))\n",
     "plt.title(\"({}-{}-{}) DQNN-based QAE p={}\".format(m,h,m,p))\n",
     "plt.xlabel(\"Iteration\",fontsize='14')\n",
