--- a/Modifeid-model3-p=0.2-m=3.ipynb
+++ b/Modifeid-model3-p=0.2-m=3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Authors: Bathaee-Ahmadkhaniha- GPU NVIDIA GeForce GTX 1080 Ti with the RAM 8 and the number of computational core 2560-Tensorflow version is 2.12.0-Pennylane version is 0.30.0 - The m-1-m DQNN-based QAE with modified decoder (model3)  and the conjugate layer $V^2=V^{1\\dagger}$. m=3, p=0.2 \n",
+    "Authors: Bathaee-Ahmadkhaniha- GPU used for batch= 30 is NVIDIA GeForce GTX 1080 Ti with the RAM 8 and the number of computational core 2560-Tensorflow version is 2.12.0-Pennylane version is 0.30.0 - The m-1-m DQNN-based QAE with modified decoder (model3)  and the conjugate layer $V^2=V^{1\\dagger}$. m=3, p=0.2 \n",
     "This code has a batch."
    ]
   },
