--- a/DQNN-based QAE.ipynb
+++ b/DQNN-based QAE.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Authors: Ahmadkhaniha and Bathaee - GPU used for batch = 30 is NVIDIA GeForce GTX 1080 Ti with the RAM 8 and the number of computational core 2560 - Tensorflow version is 2.12.0-Pennylane version is 0.30.0-The DQNN m-1-m. m=2, p=0.2 and shots=$2^{15}$.Here in sake of running fast on cpu we opt batch equals 1. please change batch = 30 to see the result exactly as the same as in our paper http://arxiv.org/abs/2311.10467."
+    "Authors: Ahmadkhaniha and Bathaee - GPU used for batch = 30 is NVIDIA GeForce GTX 1080 Ti with the RAM 8 and the number of computational core 2560 - Tensorflow version is 2.12.0-Pennylane version is 0.30.0-The DQNN m-1-m. m=2, p=0.2 and shots=$2^{15}$.Here in sake of running fast on cpu we opt batch equals 1. please change batch = 30 to see the result exactly as the same as in our paper https://doi.org/10.1103/PhysRevA.00.002600, http://arxiv.org/abs/2311.10467."
    ]
   },
   {
