Update DQNN-based QAE with a conjugate layer and modified decoder.ipynb

--- a/DQNN-based QAE with a conjugate layer and modified decoder.ipynb
+++ b/DQNN-based QAE with a conjugate layer and modified decoder.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Authors: Ahmadkhaniha and Bathaee - GPU used for batch = 30 is NVIDIA GeForce GTX 1080 Ti with the RAM 8 and the number of computational core 2560 - Tensorflow version is 2.12.0-Pennylane version is 0.30.0 - The m-1-m DQNN-based QAE  with the conjugate layer $V^2=V^{1\\dagger}$ and modified decoder. The target state is noisy. m=2, p=0.2 and shot=$2^{15}$. The number of dataset is batch. Please change batch = 30 to see the result exactly as the same as in our paper PRA DOI: 10.1103/PhysRevA.00.002600, http://arxiv.org/abs/2311.10467."
+    "Authors: Ahmadkhaniha and Bathaee - GPU used for batch = 30 is NVIDIA GeForce GTX 1080 Ti with the RAM 8 and the number of computational core 2560 - Tensorflow version is 2.12.0-Pennylane version is 0.30.0 - The m-1-m DQNN-based QAE  with the conjugate layer $V^2=V^{1\\dagger}$ and modified decoder. The target state is noisy. m=2, p=0.2 and shot=$2^{15}$. The number of dataset is batch. Please change batch = 30 to see the result exactly as the same as in our paper https://doi.org/10.1103/PhysRevA.00.002600, http://arxiv.org/abs/2311.10467."
    ]
   },
   {
